# emulationstation

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
EpicGamesStore/: EpicGamesStoreAPI.cpp  EpicGamesStoreAPI.h
es-app/: CMakeLists.txt
es-app/src/: ApiSystem.cpp  ApiSystem.h  CollectionSystemManager.cpp  EmulationStation.h  FileData.cpp  FileData.h  Gamelist.cpp  Genres.cpp  MetaData.cpp  MetaData.h  MusicStartupHelper.cpp  MusicStartupHelper.h  PlatformId.cpp  PlatformId.cpp.bak  PlatformId.h  PlatformId.h.bak  SdlEvents.h  SpotifyManager.cpp  SpotifyManager.h  SystemData.cpp  SystemData.h  SystemScreenSaver.cpp  URLEncoding.cpp  URLEncoding.h  Win32ApiSystem.cpp  Win32ApiSystem.h  curl.h  filedata2.cpp  main.cpp  nuovo 4.txt
es-app/src/EpicGamesStore/: EpicGamesParser.cpp  EpicGamesParser.h  EpicGamesStoreAPI.cpp  EpicGamesStoreAPI.h
es-app/src/GameStore/: GameStore.cpp  GameStore.h  GameStoreManager.cpp  GameStoreManager.h  GameStoreUI.cpp  GameStoreUI.h  IStoreAuth.h
es-app/src/GameStore/Amazon/: AmazonAuth.cpp  AmazonAuth.h  AmazonGamesAPI.cpp  AmazonGamesAPI.h  AmazonGamesHelper.h  AmazonGamesModels.h  AmazonGamesScanner.cpp  AmazonGamesScanner.h  AmazonGamesStore.cpp  AmazonGamesStore.h  AmazonUI.cpp  AmazonUI.h
es-app/src/GameStore/EAGames/: EAGamesAPI.cpp  EAGamesAPI.h  EAGamesAuth.cpp  EAGamesAuth.h  EAGamesModels.cpp  EAGamesModels.h  EAGamesScanner.cpp  EAGamesScanner.h  EAGamesStore.cpp  EAGamesStore.h  EAGamesUI.cpp  EAGamesUI.h
es-app/src/GameStore/EpicGames/: EpicGamesAuth.cpp  EpicGamesAuth.h  EpicGamesModels.h  EpicGamesStore.cpp  EpicGamesStore.h  EpicGamesStoreAPI.cpp  EpicGamesStoreAPI.h  EpicGamesUI.cpp  EpicGamesUI.h  GameStore.h  GameStoreManager.cpp  GameStoreManager.h  PlaceholderStore.cpp  PlaceholderStore.h
es-app/src/GameStore/GOG/: GogAuth.cpp  GogAuth.h  GogGamesAPI.cpp  GogGamesAPI.h  GogGamesStore.cpp  GogGamesStore.h  GogModels.h  GogScanner.cpp  GogScanner.h  GogUI.cpp  GogUI.h
es-app/src/GameStore/IGDB/: IGDBAPI.cpp  IGDBAPI.h  IGDBModels.cpp  IGDBModels.h
es-app/src/GameStore/Steam/: SteamAuth..cpp  SteamAuth.cpp  SteamAuth.h  SteamAuth2.cpp  SteamStore.cpp  SteamStore.h  SteamStoreAPI.cpp  SteamStoreAPI.h  SteamUI.cpp  SteamUI.h
es-app/src/GameStore/Xbox/: XboxAuth.cpp  XboxAuth.h  XboxModels.cpp  XboxModels.h  XboxStore.cpp  XboxStore.h  XboxStoreAPI.cpp  XboxStoreAPI.h  XboxUI.cpp  XboxUI.h
es-app/src/WebView/: ViewController.h  WebViewGuiComponent.cpp  WebViewGuiComponent.h
es-app/src/guis/: GuiBusyInfoPopup.cpp  GuiBusyInfoPopup.h  GuiGamelistOptions.cpp  GuiMenu.cpp  GuiMenu.h  GuiMetaDataEd.cpp  GuiNegoziOnlineMenu.cpp  GuiNegoziOnlineMenu.h  GuiNetPlaySettings.cpp  GuiScraperSettings.cpp  GuiScraperStart.cpp  GuiScraperStart.h  GuiSpotifyBrowser.cpp  GuiSpotifyBrowser.h  GuiWebViewAuthLogin.cpp  GuiWebViewAuthLogin.h
es-app/src/scrapers/: EAGamesScraper.cpp  EAGamesScraper.h  EpicGamesScraper.cpp  EpicGamesScraper.h  HfsDBScraper.cpp  IGDBScraper.cpp  IGDBScraper.h  Scraper.cpp  Scraper.h  ScreenScraper.cpp  SteamScraper.cpp  SteamScraper.h  UniversalSteamScraper.cpp  UniversalSteamScraper.h  XboxScraper.cpp  XboxScraper.h
es-app/src/services/: HttpServerCallback.cpp  HttpServerCallback.h  HttpServerThread.cpp  HttpServerThread.h  httplib.h
es-app/src/testgame/: EpicGamesStore.cpp  EpicGamesStore.h  GameStore.h  main.cpp
es-app/src/views/: SystemView.cpp  SystemView.h  ViewController.cpp  ViewController.h
es-app/src/views/gamelist/: BasicGameListView.cpp  DetailedContainer.cpp  DetailedContainer.h  VideoGameListView.cpp
es-app/src/views/spotify/: SpotifyArtistDetailView.cpp  SpotifyArtistDetailView.h  SpotifyHomeView.cpp  SpotifyHomeView.h  SpotifyPhotoGalleryView.cpp  SpotifyPhotoGalleryView.h  SpotifyPlaylistView.cpp  SpotifyPlaylistView.h  SpotifyRootView.cpp  SpotifyRootView.h  SpotifySearchView.cpp  SpotifySearchView.h  SpotifySongListView.cpp  SpotifySongListView.h
es-core/: CMakeLists.txt
es-core/src/: AppContext.cpp  AppContext.h  AudioManager.cpp  AudioManager.h  BindingManager.cpp  BindingManager.h  HttpReq.cpp  HttpReq.h  Paths.cpp  Paths.h  Settings.cpp  ThemeData.cpp  Window.cpp  Window.h  sha256.hpp
es-core/src/components/: DateTimeComponent.cpp  DateTimeEditComponent.cpp  TextEditComponent.cpp  TextEditComponent.h  VideoComponent.cpp  VideoVlcComponent.cpp
es-core/src/guis/: GuiMsgBox.cpp  GuiMsgBox.h
es-core/src/renderers/: Renderer_GLES20.cpp
es-core/src/resources/: Font.cpp  TextureData.cpp
es-core/src/utils/: Crypto.cpp  Crypto.h  FileSystemUtil.cpp  FileSystemUtil.h  MathExpr.cpp  Platform.cpp  Platform.h  RandomString.cpp  RandomString.h  StringUtil.cpp  StringUtil.h  TimeUtil.cpp  TimeUtil.h  base64.cpp
locale/lang/en_GB/LC_MESSAGES/: emulationstation2.po
locale/lang/es/LC_MESSAGES/: emulationstation2.po
locale/lang/fr/LC_MESSAGES/: emulationstation2.po
resources/: gamesdb.xml
